syntax = "proto3";

option java_package = "com.example.grpc";
option java_outer_classname = "ClienteServiceProto";

service ClienteService {
    rpc ObterCliente(ClienteRequest) returns (ClienteResponse);
}

message ClienteRequest {
    int32 id = 1;
}

message ClienteResponse {
    int32 id = 1;
    string nome = 2;
    string email = 3;
}
